force-app/main/default/objects/ssot__ConstituentRole__dlm/fields/ssot__ContextRecordId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContextRecordId__c</fullName>
    <label>Context Record</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContextRecordId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>