force-app/main/default/objects/ssot__ConstituentRole__dlm/fields/ssot__ContextRecordObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContextRecordObject__c</fullName>
    <label>Context Record Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContextRecordObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>