force-app/main/default/objects/ssot__ConstituentRole__dlm/fields/ssot__PersonId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PersonId__c</fullName>
    <label>Person</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PersonId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>