force-app/main/default/objects/ssot__ConstituentRole__dlm/fields/ssot__rel_1719819892708_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819892708_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ConstituentRole_ContextRecordId_map__rel</label>
    <referenceTo>ssot__Learning__dlm</referenceTo>
    <relationshipLabel>ConstituentRole_ContextRecordId_map__rel</relationshipLabel>
    <relationshipName>rel_1719819892708_end</relationshipName>
    <type>Lookup</type>
</CustomField>