force-app/main/default/objects/ssot__ConstituentRole__dlm/fields/ssot__rel_1720291141255_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291141255_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ConstituentRole_PersonId_map_Individ_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>ConstituentRole_PersonId_map_Individ_rel</relationshipLabel>
    <relationshipName>rel_1720291141255_end</relationshipName>
    <type>Lookup</type>
</CustomField>